--- a/05_support_vector_machines.ipynb
+++ b/05_support_vector_machines.ipynb
@@ -84,14 +84,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Large margin classification"
+    "# Linear SVM Classification"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next few code cells generate the first figures in chapter 5. The first actual code sample comes after:"
+    "The next few code cells generate the first figures in chapter 5. The first actual code sample comes after.\n",
+    "\n",
+    "**Code to generate Figure 5–1. Large margin classification**"
    ]
   },
   {
@@ -206,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sensitivity to feature scales"
+    "**Code to generate Figure 5–2. Sensitivity to feature scales**"
    ]
   },
   {
@@ -271,7 +273,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sensitivity to outliers"
+    "## Soft Margin Classification\n",
+    "**Code to generate Figure 5–3. Hard margin sensitivity to outliers**"
    ]
   },
   {
@@ -349,14 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Large margin *vs* margin violations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is the first code example in chapter 5:"
+    "**This is the first code example in chapter 5:**"
    ]
   },
   {
@@ -419,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's generate the graph comparing different regularization settings:"
+    "**Code to generate Figure 5–4. Large margin versus fewer margin violations**"
    ]
   },
   {
@@ -543,7 +539,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Non-linear classification"
+    "# Nonlinear SVM Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 5–5. Adding features to make a dataset linearly separable**"
    ]
   },
   {
@@ -640,6 +643,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Here is second code example in the chapter:**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -677,6 +687,13 @@
     "    ])\n",
     "\n",
     "polynomial_svm_clf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 5–6. Linear SVM classifier using polynomial features**"
    ]
   },
   {
@@ -723,6 +740,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Polynomial Kernel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Next code example:**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -747,6 +778,13 @@
     "        (\"svm_clf\", SVC(kernel=\"poly\", degree=3, coef0=1, C=5))\n",
     "    ])\n",
     "poly_kernel_svm_clf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 5–7. SVM classifiers with a polynomial kernel**"
    ]
   },
   {
@@ -815,6 +853,20 @@
     "\n",
     "save_fig(\"moons_kernelized_polynomial_svc_plot\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Similarity Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 5–8. Similarity features using the Gaussian RBF**"
    ]
   },
   {
@@ -927,6 +979,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gaussian RBF Kernel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Next code example:**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -949,6 +1015,13 @@
     "        (\"svm_clf\", SVC(kernel=\"rbf\", gamma=5, C=0.001))\n",
     "    ])\n",
     "rbf_kernel_svm_clf.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 5–9. SVM classifiers using an RBF kernel**"
    ]
   },
   {
@@ -1015,7 +1088,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Regression\n"
+    "# SVM Regression"
    ]
   },
   {
@@ -1028,6 +1101,13 @@
     "m = 50\n",
     "X = 2 * np.random.rand(m, 1)\n",
     "y = (4 + 3 * X + np.random.randn(m, 1)).ravel()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Next code example:**"
    ]
   },
   {
@@ -1051,6 +1131,13 @@
     "\n",
     "svm_reg = LinearSVR(epsilon=1.5, random_state=42)\n",
     "svm_reg.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 5–10. SVM Regression**"
    ]
   },
   {
@@ -1153,6 +1240,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Next code example:**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -1173,6 +1267,13 @@
     "\n",
     "svm_poly_reg = SVR(kernel=\"poly\", degree=2, C=100, epsilon=0.1, gamma=\"scale\")\n",
     "svm_poly_reg.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 5–11. SVM Regression using a second-degree polynomial kernel**"
    ]
   },
   {
@@ -1242,7 +1343,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Under the hood"
+    "# Under the Hood\n",
+    "## Decision Function and Predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 5–12. Decision function for the iris dataset**"
    ]
   },
   {
@@ -1324,7 +1433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Small weight vector results in a large margin"
+    "**Code to generate Figure 5–13. A smaller weight vector results in a larger margin**"
    ]
   },
   {
@@ -1414,7 +1523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hinge loss"
+    "**Code to generate the Hinge Loss figure:**"
    ]
   },
   {
