--- a/08_dimensionality_reduction.ipynb
+++ b/08_dimensionality_reduction.ipynb
@@ -84,8 +84,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Projection methods\n",
-    "Build 3D dataset:"
+    "# PCA\n",
+    "Let's build a simple 3D dataset:"
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PCA using SVD decomposition"
+    "## Principal Components"
    ]
   },
   {
@@ -158,6 +158,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Projecting Down to d Dimensions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -180,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PCA using Scikit-Learn"
+    "## Using Scikit-Learn"
    ]
   },
   {
@@ -457,6 +464,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Explained Variance Ratio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now let's look at the explained variance ratio:"
    ]
   },
@@ -546,6 +560,13 @@
    "metadata": {},
    "source": [
     "Next, let's generate some nice figures! :)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 8–2. A 3D dataset lying close to a 2D subspace:**"
    ]
   },
   {
@@ -678,6 +699,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 8–3. The new 2D dataset after projection:**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -722,8 +750,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manifold learning\n",
-    "Swiss roll:"
+    "**Code to generate Figure 8–4. Swiss roll dataset:**"
    ]
   },
   {
@@ -733,6 +760,7 @@
    "outputs": [],
    "source": [
     "from sklearn.datasets import make_swiss_roll\n",
+    "\n",
     "X, t = make_swiss_roll(n_samples=1000, noise=0.2, random_state=42)"
    ]
   },
@@ -781,6 +809,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 8–5. Squashing by projecting onto a plane (left) versus unrolling the Swiss roll (right):**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -823,6 +858,13 @@
     "\n",
     "save_fig(\"squished_swiss_roll_plot\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 8–6. The decision boundary may not always be simpler with lower dimensions:**"
    ]
   },
   {
@@ -987,7 +1029,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PCA"
+    "**Code to generate Figure 8–7. Selecting the subspace to project on:**"
    ]
   },
   {
@@ -1080,7 +1122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MNIST compression"
+    "## Choosing the Right Number of Dimensions"
    ]
   },
   {
@@ -1146,6 +1188,13 @@
    ],
    "source": [
     "d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 8–8. Explained variance as a function of the number of dimensions:**"
    ]
   },
   {
@@ -1240,6 +1289,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA for Compression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -1248,6 +1304,13 @@
     "pca = PCA(n_components=154)\n",
     "X_reduced = pca.fit_transform(X_train)\n",
     "X_recovered = pca.inverse_transform(X_reduced)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 8–9. MNIST compression that preserves 95% of the variance:**"
    ]
   },
   {
@@ -1322,12 +1385,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Incremental PCA"
+    "## Randomized PCA"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnd_pca = PCA(n_components=154, svd_solver=\"randomized\", random_state=42)\n",
+    "X_reduced = rnd_pca.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Incremental PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1360,8 +1440,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's check that compression still works well:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1500,7 @@
        "True"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1527,7 @@
        "False"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,7 +1540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using `memmap()`"
+    "**Using `memmap()`:**"
    ]
   },
   {
@@ -1465,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1597,7 @@
        "IncrementalPCA(batch_size=525, n_components=154)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,20 +1611,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rnd_pca = PCA(n_components=154, svd_solver=\"randomized\", random_state=42)\n",
-    "X_reduced = rnd_pca.fit_transform(X_train)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Time complexity"
+    "**Time complexity:**"
    ]
   },
   {
@@ -1738,6 +1815,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 8–10. Swiss roll reduced to 2D using kPCA with various kernels:**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
@@ -1789,6 +1873,13 @@
     "\n",
     "save_fig(\"kernel_pca_plot\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 8–11. Kernel PCA and the reconstruction pre-image error:**"
    ]
   },
   {
@@ -1862,6 +1953,13 @@
     "plt.xlabel(\"$z_1$\", fontsize=18)\n",
     "plt.ylabel(\"$z_2$\", fontsize=18, rotation=0)\n",
     "plt.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selecting a Kernel and Tuning Hyperparameters"
    ]
   },
   {
@@ -1984,6 +2082,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 8–12. Unrolled Swiss roll using LLE:**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
@@ -2024,7 +2129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MDS, Isomap and t-SNE"
+    "## Other Dimensionality Reduction Techniques"
    ]
   },
   {
@@ -2076,6 +2181,13 @@
     "y_mnist = mnist[\"target\"]\n",
     "lda.fit(X_mnist, y_mnist)\n",
     "X_reduced_lda = lda.transform(X_mnist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Code to generate Figure 8–13. Using various techniques to reduce the Swill roll to 2D:**"
    ]
   },
   {
